<resources>
    <string name="app_name">Shopping List</string>
    <string name="btnAddItem">Add Item</string>
    <string name="Item1">Rice</string>
    <string name="Item2">Bread</string>
    <string name="Item3">Sugar</string>
    <string name="Item4">Meat</string>
    <string name="Item5">Frozen Pizza</string>
    <string name="Item6">Pasta</string>
    <string name="Item7">Tomato Sauce</string>
    <string name="Item8">Cheese</string>
    <string name="Item9">Onion</string>
    <string name="Item10">Milk</string>
</resources>
